EXT-997: refresh template injection upon addition of custom id

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -218,7 +218,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
             <!-- Dropdown Structure -->
             <ul id="addDefaultDropdown" class="dropdown-content">
                 <!-- Dynamically built -->
-            </ul>
+            </ul>customSettingsBackButton
         </main>
 
         <!-- Manage custom domains section -->
@@ -227,7 +227,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                 <!-- Back and clear buttons -->
                 <div class="row valign-wrapper">
                     <div class="col">
-                        <a id="customDomainsBackButton" class="btn-floating btn-jti tooltipped center-align" data-position="right" data-delay="50" data-tooltip="Back">
+                        <a id="customSettingsBackButton" class="btn-floating btn-jti tooltipped center-align" data-position="right" data-delay="50" data-tooltip="Back">
                             <i class="material-icons">arrow_back</i>
                         </a>
                     </div>
