--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -65,12 +65,12 @@
             {{/each}}
         </script>
 
-        <script id="addDomains" type="text/x-handlebars-template">
-            {{#each domains}}
+        <script id="addObject" type="text/x-handlebars-template">
+            {{#each object}}
                 {{#if this.default}}
                     <li class='collection-item container custom-domain-collection'>
                         <div class='row valign-wrapper remove-margin'>
-                            <div class='col s10 left-align custom-domain-label'>
+                            <div class='col s10 left-align custom-label'>
                                 {{ this.name }} 
                             </div>
                             <div class='col s2'>
@@ -80,41 +80,12 @@
                 {{else}}
                     <li class='collection-item custom-domain-collection container'>
                         <div class='row valign-wrapper remove-margin' style: >
-                            <div class="col s10 left-align custom-domain-label">
+                            <div class="col s10 left-align custom-label">
                                 {{ this.name }} 
                             </div>
                             <div class='col s2'>
                                 <a class='btn-floating btn-jti tooltipped' data-position='left' data-delay='50' data-tooltip='Remove Domain'> 
                                     <i id={{this.id}} class='custom-domain-remove-button material-icons'>delete</i> 
-                                </a>
-                            </div>
-                        </div>
-                    </li>
-                {{/if}}
-            {{/each}}
-        </script>
-
-        <script id="addInputIDs" type="text/x-handlebars-template">
-            {{#each inputIDs}}
-                {{#if this.default}}
-                    <li class='collection-item container custom-inputID-collection'>
-                        <div class='row valign-wrapper remove-margin'>
-                            <div class='col s10 left-align custom-domain-label'>
-                                {{ this.name }}
-                            </div>
-                            <div class='col s2'>
-                            </div>
-                        </div>
-                    </li>
-                {{else}}
-                    <li class='collection-item custom-inputID-collection container'>
-                        <div class='row valign-wrapper remove-margin' style: >
-                            <div class='col s10 left-align custom-domain-label'>
-                                {{ this.name }}
-                            </div>
-                            <div class='col s2'>
-                                <a class='btn-floating btn-jti tooltipped' data-position='left' data-delay='50' data-tooltip='Remove Input ID'>
-                                    <i id={{this.id}} class='custom-inputID-remove-button material-icons'>delete</i>
                                 </a>
                             </div>
                         </div>
@@ -144,22 +115,14 @@
                             openTemplate: event.data.openTemplate
                         }, event.origin);
                         break;
-                    case "renderDomains":
-                        var domainSource = document.getElementById('addDomains').innerHTML;
-                        var htmlDomainTemplate = Handlebars.compile(domainSource);
+                    case "renderObject":
+                        var objectSource = document.getElementById('addObject').innerHTML;
+                        var htmlDomainTemplate = Handlebars.compile(objectSource);
                         event.source.postMessage({
-                            content: 'domain-list',
+                            content: 'settings-list',
                             html: htmlDomainTemplate(event.data.context),
-                            callback: event.data.callback
-                        }, event.origin);
-                        break;
-                    case "renderInputIDs":
-                        var inputIDSource = document.getElementById('addInputIDs').innerHTML;
-                        var htmlInputIDTemplate = Handlebars.compile(inputIDSource);
-                        event.source.postMessage({
-                            content: 'inputID-list',
-                            html: htmlInputIDTemplate(event.data.context),
-                            callback: event.data.callback
+                            callback: event.data.callback,
+                            listID: event.data.type
                         }, event.origin);
                         break;
                 }
