--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -135,17 +135,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                     </div>
                 </div>       
                 <div class="divider"></div>
-                <div class="row">
-                    <div class="col s8 valign-wrapper">
-                        <h6 id="templateEditorTitle">Templates:</h6>
-                    </div>
-                    <div class="col s4 right-align">
-                        <!-- Modal Trigger -->
-                        <a id="add" class="btn-floating btn-jti tooltipped modal-trigger" data-position="left" data-delay="50" data-tooltip="Add a Template">
-                            <i class="material-icons">add</i>
-                        </a>
-                    </div>
-                </div>
+                
                 <div class="section">
                     <ul class="collapsible popout" data-collapsible="accordion" id="templateEditor">
                     </ul>
@@ -241,7 +231,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                 <!-- Custom Domain section -->
                 <div class="row valign-wrapper">
                     <div class="col">
-                        <a id="clearCustomDomains" class="btn-floating btn-jti tooltipped center-align" data-position="right" data-delay="50" data-tooltip="Clear All Domains">
+                        <a id="clearCustomDomains" class="btn-floating btn-jti tooltipped center-align custom-domain-ui" data-position="right" data-delay="50" data-tooltip="Clear All Domains">
                             <i class="material-icons">delete</i>
                         </a>
                     </div>
@@ -259,7 +249,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                             <input id="customDomainInput" type="text" name="url" placeholder="Custom Domain URL">
                         </div>
                         <div class="col s2 right-align">
-                            <a id="customDomainInputButton" class="btn-floating btn-jti tooltipped" data-position="left" data-delay="50" data-tooltip="Add Domain">
+                            <a id="customDomainInputButton" class="btn-floating btn-jti tooltipped custom-domain-ui" data-position="left" data-delay="50" data-tooltip="Add Domain">
                                 <i class="material-icons">add</i>
                             </a>
                         </div>
@@ -275,7 +265,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                 <!-- Custom Input ID section -->
                 <div class="row valign-wrapper">
                         <div class="col">
-                            <a id="clearCustomIDs" class="btn-floating btn-jti tooltipped center-align" data-position="right" data-delay="50" data-tooltip="Clear All IDs">
+                            <a id="clearCustomIDs" class="btn-floating btn-jti tooltipped center-align custom-inputID-ui" data-position="right" data-delay="50" data-tooltip="Clear All IDs">
                                 <i class="material-icons">delete</i>
                             </a>
                         </div>
@@ -293,7 +283,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                                 <input id="customIDInput" type="text" name="url" placeholder="Custom Input ID">
                             </div>
                             <div class="col s2 right-align">
-                                <a id="customIDInputButton" class="btn-floating btn-jti tooltipped" data-position="left" data-delay="50" data-tooltip="Add ID">
+                                <a id="customIDInputButton" class="btn-floating btn-jti tooltipped custom-inputID-ui" data-position="left" data-delay="50" data-tooltip="Add ID">
                                     <i class="material-icons">add</i>
                                 </a>
                             </div>
