EXT-997: fix template logic based on PR comments

--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -7,7 +7,7 @@
         <script id="edit_template" type="text/x-handlebars-template">
             <div class="row">
                 <div class="col s8 valign-wrapper">
-                    {{#if tempLoaded}}
+                    {{#if templates}}
                         <h6 id="templateEditorTitle">Templates:</h6>
                     {{else}}
                         <h6 id="templateEditorTitle">No templates are currently loaded</h6>
