--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -125,27 +125,17 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                 <div class="section">
                     <div class="row">
                         <div class="col s8 valign-wrapper">
-                            <h6 class="left-align"> Manage Custom Domains:</h6>
+                            <h6 class="left-align"> Manage Custom Settings:</h6>
                         </div>
                         <div class="col s4 right-align">
-                            <a id="customDomains" class="btn-floating btn-jti tooltipped" data-position="left" data-delay="50" data-tooltip="Manage Domains">
+                            <a id="customSettings" class="btn-floating btn-jti tooltipped" data-position="left" data-delay="50" data-tooltip="Manage Settings">
                                 <i class="material-icons">format_list_bulleted</i>
                             </a>
                         </div>
                     </div>
                 </div>       
                 <div class="divider"></div>
-                <div class="row">
-                    <div class="col s8 valign-wrapper">
-                        <h6 id="templateEditorTitle">Templates:</h6>
-                    </div>
-                    <div class="col s4 right-align">
-                        <!-- Modal Trigger -->
-                        <a id="add" class="btn-floating btn-jti tooltipped modal-trigger" data-position="left" data-delay="50" data-tooltip="Add a Template">
-                            <i class="material-icons">add</i>
-                        </a>
-                    </div>
-                </div>
+                
                 <div class="section">
                     <ul class="collapsible popout" data-collapsible="accordion" id="templateEditor">
                     </ul>
@@ -221,27 +211,35 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
             </ul>
         </main>
 
-        <!-- Manage custom domains section -->
+        <!-- Manage custom settings section -->
         <div class="container">
-            <div class="custom-domain-list">
-                <!-- Back and clear buttons -->
+            <div class="custom-settings-options">
+                <!-- Back button -->
                 <div class="row valign-wrapper">
-                    <div class="col s2">
-                        <a id="customDomainsBackButton" class="btn-floating btn-jti tooltipped center-align" data-position="right" data-delay="50" data-tooltip="Back">
+                    <div class="col">
+                        <a id="customSettingsBackButton" class="btn-floating btn-jti tooltipped center-align" data-position="right" data-delay="50" data-tooltip="Back">
                             <i class="material-icons">arrow_back</i>
                         </a>
                     </div>
-                    <div class="col s8 center-align pull-s1">
-                        <div color="black" class="center-align custom-domain-label">Manage Custom Domains</div>
-                    </div>
-                    <div class="col s2 right-align">
-                        <a id="clearCustomDomains" class="btn-floating btn-jti tooltipped" data-position="left" data-delay="50" data-tooltip="Clear All Domains">
-                                <i class="material-icons">delete</i>
-                        </a>
+                    <div class="col center-align">
+                        <div color="black" class="center-align custom-label">Manage Custom Settings</div>
                     </div>
                 </div>
-                <!-- Add Custom Domain section -->
+
                 <div class="divider"></div>
+
+                <!-- Custom Domain section -->
+                <div class="row valign-wrapper">
+                    <div class="col">
+                        <a id="clearCustomDomains" class="btn-floating btn-jti tooltipped center-align custom-domain-ui" data-position="right" data-delay="50" data-tooltip="Clear All Domains">
+                            <i class="material-icons">delete</i>
+                        </a>
+                    </div>
+                    <div class="col center-align">
+                        <div color="black" class="center-align custom-label">Custom Domains</div>
+                    </div>
+                </div>
+
                 <div class="section">
                     <div class="row">
                         <div class="col s5 valign-wrapper">
@@ -251,7 +249,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                             <input id="customDomainInput" type="text" name="url" placeholder="Custom Domain URL">
                         </div>
                         <div class="col s2 right-align">
-                            <a id="customDomainInputButton" class="btn-floating btn-jti tooltipped" data-position="left" data-delay="50" data-tooltip="Add Domain">
+                            <a id="customDomainInputButton" class="btn-floating btn-jti tooltipped custom-domain-ui" data-position="left" data-delay="50" data-tooltip="Add Domain">
                                 <i class="material-icons">add</i>
                             </a>
                         </div>
@@ -261,6 +259,40 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                 <!-- List of custom domains -->
                 <ul class="collection" id="customDomainsList">
                 </ul>
+
+                <div class="divider"></div>
+
+                <!-- Custom Input ID section -->
+                <div class="row valign-wrapper">
+                        <div class="col">
+                            <a id="clearCustomIDs" class="btn-floating btn-jti tooltipped center-align custom-inputID-ui" data-position="right" data-delay="50" data-tooltip="Clear All IDs">
+                                <i class="material-icons">delete</i>
+                            </a>
+                        </div>
+                        <div class="col center-align">
+                            <div color="black" class="center-align custom-label">Custom Input IDs</div>
+                        </div>
+                    </div>
+    
+                    <div class="section">
+                        <div class="row">
+                            <div class="col s5 valign-wrapper">
+                                <h6> Add Custom Input IDs:</h6>
+                            </div>
+                            <div class="col s5">
+                                <input id="customIDInput" type="text" name="url" placeholder="Custom Input ID">
+                            </div>
+                            <div class="col s2 right-align">
+                                <a id="customIDInputButton" class="btn-floating btn-jti tooltipped custom-inputID-ui" data-position="left" data-delay="50" data-tooltip="Add ID">
+                                    <i class="material-icons">add</i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="divider spaced"></div>
+                    <!-- List of custom input IDs -->
+                    <ul class="collection" id="customIDsList">
+                    </ul>
             </div>
         </div>
 
