--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -5,6 +5,21 @@
     </head>
     <body>
         <script id="edit_template" type="text/x-handlebars-template">
+            <div class="row">
+                <div class="col s8 valign-wrapper">
+                    {{#if templates}}
+                        <h6 id="templateEditorTitle">Templates:</h6>
+                    {{else}}
+                        <h6 id="templateEditorTitle">No templates are currently loaded</h6>
+                    {{/if}}
+                </div>
+                <div class="col s4 right-align">
+                    <!-- Modal Trigger -->
+                    <a id="add" class="btn-floating btn-jti tooltipped modal-trigger" data-position="left" data-delay="50" data-tooltip="Add a Template">
+                        <i class="material-icons">add</i>
+                    </a>
+                </div>
+            </div>
             {{#each templates}}
                 <li>
                     <div class="collapsible-header grey lighten-5 {{{ boldIfDefault this }}}" data-templateID="{{ this.id }}" >
@@ -65,27 +80,27 @@
             {{/each}}
         </script>
 
-        <script id="addDomains" type="text/x-handlebars-template">
-            {{#each domains}}
+        <script id="addObject" type="text/x-handlebars-template">
+            {{#each object}}
                 {{#if this.default}}
-                    <li class='collection-item container custom-domain-collection'>
-                        <div class='row valign-wrapper remove-margin'>
-                            <div class='col s10 left-align custom-domain-label'>
+                    <li class="collection-item container custom-domain-collection">
+                        <div class="row valign-wrapper remove-margin">
+                            <div class="col s10 left-align custom-label">
                                 {{ this.name }} 
                             </div>
-                            <div class='col s2'>
+                            <div class="col s2">
                             </div>
                         </div>
                     </li>
                 {{else}}
-                    <li class='collection-item custom-domain-collection container'>
-                        <div class='row valign-wrapper remove-margin' style: >
-                            <div class="col s10 left-align custom-domain-label">
-                                {{ this.name }} 
+                    <li class="collection-item custom-domain-collection container">
+                        <div class="row valign-wrapper remove-margin" style: >
+                            <div class="col s10 left-align custom-label">
+                                {{ this.name }}
                             </div>
-                            <div class='col s2'>
-                                <a class='btn-floating btn-jti tooltipped' data-position='left' data-delay='50' data-tooltip='Remove Domain'> 
-                                    <i id={{this.id}} class='custom-domain-remove-button material-icons'>delete</i> 
+                            <div class="col s2">
+                                <a class="btn-floating btn-jti tooltipped" data-position="left" data-delay="50" data-tooltip="Remove Domain"> 
+                                    <i id={{this.id}} class="custom-{{../../classAddition}}-remove-button custom-{{../../classAddition}}-ui material-icons">delete</i>
                                 </a>
                             </div>
                         </div>
@@ -115,13 +130,14 @@
                             openTemplate: event.data.openTemplate
                         }, event.origin);
                         break;
-                    case "renderDomains":
-                        var domainSource = document.getElementById('addDomains').innerHTML;
-                        var htmlDomainTemplate = Handlebars.compile(domainSource);
-                            event.source.postMessage({
-                            content: 'domain-list',
+                    case "renderObject":
+                        var objectSource = document.getElementById('addObject').innerHTML;
+                        var htmlDomainTemplate = Handlebars.compile(objectSource);
+                        event.source.postMessage({
+                            content: 'settings-list',
                             html: htmlDomainTemplate(event.data.context),
-                            callback: event.data.callback
+                            callback: event.data.callback,
+                            listID: event.data.type
                         }, event.origin);
                         break;
                 }
