EXT-1002: fix tooltips and ability to add templates

--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="col s4 right-align">
                     <!-- Modal Trigger -->
-                    <a id="add" class="btn-floating btn-jti tooltipped modal-trigger" data-position="left" data-delay="50" data-tooltip="Add a Template">
+                    <a id="add" class="btn-floating btn-jti modal-trigger" data-position="left" data-delay="50" data-toggle="tooltip" data-tooltip="Add a Template">
                         <i class="material-icons">add</i>
                     </a>
                 </div>
@@ -99,7 +99,7 @@
                                 {{ this.name }}
                             </div>
                             <div class="col s2">
-                                <a class="btn-floating btn-jti tooltipped" data-position="left" data-delay="50" data-tooltip="Remove Domain"> 
+                                <a class="btn-floating btn-jti" data-position="left" data-delay="50" data-toggle="tooltip" data-tooltip="Remove {{../../classAddition}}"> 
                                     <i id={{this.id}} class="custom-{{../../classAddition}}-remove-button custom-{{../../classAddition}}-ui material-icons">delete</i>
                                 </a>
                             </div>
