Ext 1002 fix add template (#47)
* EXT-1002: fix tooltips and ability to add templates

* EXT-1002: remove debug console.log statement

* EXT-1002: fix tooltips for sandbox template elements

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -133,7 +133,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                             </a>
                         </div>
                     </div>
-                </div>       
+                </div>
                 <div class="divider"></div>
                 
                 <div class="section">
@@ -231,7 +231,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                 <!-- Custom Domain section -->
                 <div class="row valign-wrapper">
                     <div class="col">
-                        <a id="clearCustomDomains" class="btn-floating btn-jti tooltipped center-align custom-domain-ui" data-position="right" data-delay="50" data-tooltip="Clear All Domains">
+                        <a id="clearCustomDomains" class="btn-floating btn-jti tooltipped center-align custom-Domain-ui" data-position="right" data-delay="50" data-tooltip="Clear All Domains">
                             <i class="material-icons">delete</i>
                         </a>
                     </div>
@@ -249,7 +249,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                             <input id="customDomainInput" type="text" name="url" placeholder="Custom Domain URL">
                         </div>
                         <div class="col s2 right-align">
-                            <a id="customDomainInputButton" class="btn-floating btn-jti tooltipped custom-domain-ui" data-position="left" data-delay="50" data-tooltip="Add Domain">
+                            <a id="customDomainInputButton" class="btn-floating btn-jti tooltipped custom-Domain-ui" data-position="left" data-delay="50" data-tooltip="Add Domain">
                                 <i class="material-icons">add</i>
                             </a>
                         </div>
@@ -265,7 +265,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                 <!-- Custom Input ID section -->
                 <div class="row valign-wrapper">
                         <div class="col">
-                            <a id="clearCustomIDs" class="btn-floating btn-jti tooltipped center-align custom-inputID-ui" data-position="right" data-delay="50" data-tooltip="Clear All IDs">
+                            <a id="clearCustomIDs" class="btn-floating btn-jti tooltipped center-align custom-ID-ui" data-position="right" data-delay="50" data-tooltip="Clear All IDs">
                                 <i class="material-icons">delete</i>
                             </a>
                         </div>
@@ -283,7 +283,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                                 <input id="customIDInput" type="text" name="url" placeholder="Custom Input ID">
                             </div>
                             <div class="col s2 right-align">
-                                <a id="customIDInputButton" class="btn-floating btn-jti tooltipped custom-inputID-ui" data-position="left" data-delay="50" data-tooltip="Add ID">
+                                <a id="customIDInputButton" class="btn-floating btn-jti tooltipped custom-ID-ui" data-position="left" data-delay="50" data-tooltip="Add ID">
                                     <i class="material-icons">add</i>
                                 </a>
                             </div>
